# trishell

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
src/: builtins.rs  completion.rs  config.rs  history.rs  main.rs
