cargo-features = ["profile-rustflags"]

[package]
name = "trishell"
version = "0.0.0"
edition = "2021"

[profile.release] # This is optimized for microscopic binaries
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dirs = "5.0.1"
path-absolutize = "3.1.1"
regex = "1.11.0"
users = "0.11.0"
yaml-rust = "0.4.5"
