cargo-features = ["profile-rustflags"]

[package]
name = "trishell"
version = "0.0.0"
edition = "2021"

[profile.release] # This is optimized for microscopic binaries
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dirs = "5.0.1"
path-absolutize = "3.1.1"
shell-words = "1.1.0"
whoami = "1.5.2"
yaml-rust = "0.4.5"
termion = "4.0.3"

[dependencies.regex]
version = "1.11.0"
default-features = false
features = ["std", "unicode-perl"]
